kubernetes/apps/zwavejs2mqtt/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: zwavejs2mqtt-ingress
  namespace: home-assistant
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`zwave.sobrinho.pt`)
      kind: Rule
      services:
        - name: zwavejs2mqtt
          port: main
  tls:
    secretName: zwavejs2mqtt-cert
